test/failing/badlist3.trunnel

struct x {
  u16 a IN [ 3..1 ];
}

